--- a/packages/codistica-react/src/components/dot-navigation/index.module.scss
+++ b/packages/codistica-react/src/components/dot-navigation/index.module.scss
@@ -1,12 +1,15 @@
-._main { // FOR COMPONENT MAIN ELEMENT. DO NOT DELETE
+.container {
   display: inline-flex;
   justify-content: center;
   align-items: center;
 }
 
-._scope { // FOR HTML ELEMENT AND ATTRIBUTE SELECTORS. DO NOT DELETE
+.container {
   * {
-    box-sizing: border-box; // TODO: TEMP
+    box-sizing: border-box;
+  }
+  span {
+    transition: border 0.3s linear;
   }
 }
 
@@ -16,7 +19,6 @@
   background-color: rgba(51, 51, 51, 0.2);
   margin: 3px;
   cursor: pointer;
-  transition: border 0.3s linear;
 }
 
 .active {
