--- a/packages/codistica-react/stories/components/form/dark-form/index.module.scss
+++ b/packages/codistica-react/stories/components/form/dark-form/index.module.scss
@@ -44,7 +44,7 @@ $color-violet: #de81d9;
   border: 1px solid $color-green
 }
 
-._isBlinkForm {
+.blinkingForm {
   animation: blink 0.3s linear none 3;
 }
 
