--- a/packages/codistica-react/src/components/button/index.module.scss
+++ b/packages/codistica-react/src/components/button/index.module.scss
@@ -1,49 +1,29 @@
-$color-gray: #333333;
-$color-white: #dedede;
-$color-gray-alpha: rgba(51, 51, 51, 0.1);
-$color-white-alpha: rgba(222, 222, 222, 0.1);
-
-.button {
-  border: 2px solid;
+.buttonEnabled,
+.buttonDisabled {
+  border: 2px solid #333333;
+  color: #333333;
+  font-size: 1em;
   border-radius: 12px;
   padding: 5px 30px;
+  margin: 5px;
   cursor: pointer;
   text-align: center;
   white-space: nowrap;
   display: inline-block;
   background-color: transparent;
-  outline: none;
-  font-size: 1em;
-  text-decoration: none;
   user-select: none;
 }
 
-.light {
-  border-color: $color-gray;
-  color: $color-gray;
+.buttonEnabled:hover,
+.buttonEnabled:focus {
+  background-color: rgba(51, 51, 51, 0.1);
 }
 
-.dark {
-  border-color: $color-white;
-  color: $color-white;
+.buttonEnabled:active {
+  opacity: 0.7;
 }
 
-:not(.disabled).light:hover,
-:not(.disabled).light:focus {
-  background-color: $color-gray-alpha;
-}
-
-:not(.disabled).dark:hover,
-:not(.disabled).dark:focus {
-  background-color: $color-white-alpha;
-}
-
-:not(.disabled).light:active,
-:not(.disabled).dark:active {
-  opacity: 0.6;
-}
-
-.disabled {
+.buttonDisabled {
   cursor: not-allowed;
   opacity: 0.5;
 }
