--- a/packages/codistica-react/src/components/input-radio/index.module.scss
+++ b/packages/codistica-react/src/components/input-radio/index.module.scss
@@ -1,5 +1,6 @@
 .root {
   display: flex;
+  flex-direction: column;
 }
 
 .inputRow {
@@ -10,6 +11,7 @@
 
 .title {
   margin-left: 10px;
+  color: #232323;
 }
 
 .inputWrapper {
@@ -20,6 +22,8 @@
   border: none;
   outline: none;
   font-size: 0;
+  height: 20px;
+  width: 20px;
 }
 
 // POSITION/CENTER ALL ELEMENTS AND RESET DEFAULT STYLES
@@ -58,7 +62,7 @@
   border-radius: 50%;
   border: 1px solid;
   transition: border 0.2s linear;
-  content: ""; // MAKE OUTER CIRCLE ALWAYS VISIBLE
+  content: ''; // MAKE OUTER CIRCLE ALWAYS VISIBLE
   z-index: 10;
 }
 
@@ -73,7 +77,7 @@
 
 // SHOW INNER DOT IN CHECKED INPUTS
 .input:checked + .label::after {
-  content: "";
+  content: '';
 }
 
 .blink {
