[NEW] [react] - Update stories.

--- a/packages/codistica-react/stories/components/form/default-form/index.module.scss
+++ b/packages/codistica-react/stories/components/form/default-form/index.module.scss
@@ -16,7 +16,7 @@ $color-violet: #de81d9;
   justify-content: center;
 }
 
-.form input:not([type="checkbox"]):not([type="radio"]) {
+.form input:not([type='checkbox']):not([type='radio']) {
   width: 50%;
 }
 
