--- a/packages/codistica-demo/src/routes/slides/sections/full-screen-slide-a/index.module.scss
+++ b/packages/codistica-demo/src/routes/slides/sections/full-screen-slide-a/index.module.scss
@@ -1,9 +1,9 @@
-@import '../../css/colors.module.scss';
+@import '../../../../css/colors.module';
 
 .slideItem {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
