--- a/packages/codistica-react/src/utils/img-hover-switch/index.module.scss
+++ b/packages/codistica-react/src/utils/img-hover-switch/index.module.scss
@@ -1,25 +1,21 @@
 .root {
   display: inline-block;
-  cursor: pointer;
   user-select: none;
   font-size: 0;
 }
 
-.root img:last-of-type,
 .switchChilds img:last-of-type {
   display: none;
 }
 
+*:focus .switchChilds img:first-of-type,
 .switchChilds:hover img:first-of-type,
 .switchChilds:focus img:first-of-type {
   display: none;
 }
 
+*:focus .switchChilds img:last-of-type,
 .switchChilds:hover img:last-of-type,
 .switchChilds:focus img:last-of-type {
   display: inline;
-}
-
-.notAvailable {
-  cursor: not-allowed;
 }
