--- a/packages/codistica-react-icons/scripts/templates/index.mustache
+++ b/packages/codistica-react-icons/scripts/templates/index.mustache
@@ -2,7 +2,7 @@
 
 // ICONS
 {{#icons}}
-export { {{componentName}} } from './icons/{{rawName}}';
+    export { {{componentName}} } from './icons/{{name}}';
 {{/icons}}
 
 // UTILS
