--- a/packages/codistica-react-icons/scripts/templates/story.mustache
+++ b/packages/codistica-react-icons/scripts/templates/story.mustache
@@ -68,7 +68,7 @@ function AllIcons() {
         <Fragment>
             <div className={jssClassNames.root}>
                 <div className={jssClassNames.icons}>
-                    {icons.map((Icon, key) => {
+                    {icons.map((Icon, index) => {
                         const icon = (
                             <Icon
                                 color={iconsColor}
@@ -76,7 +76,7 @@ function AllIcons() {
                             />
                         );
                         return (
-                            <span key={key}>
+                            <span key={index}>
                                 {icon}
                                 <p>
                                     {stringUtils.toTitleCase(icon.props.title)}
