[NEW] [*] - Perform some minor changes and cleanups.

--- a/packages/codistica-react/src/components/button/index.module.scss
+++ b/packages/codistica-react/src/components/button/index.module.scss
@@ -3,8 +3,9 @@
   border: 2px solid #333333;
   color: #333333;
   font-size: 1em;
-  border-radius: 12px;
-  padding: 5px 30px;
+  font-family: sans-serif;
+  border-radius: 4px;
+  padding: 8px 30px;
   margin: 5px;
   cursor: pointer;
   text-align: center;
