--- a/packages/codistica-react/src/components/input-text/index.module.scss
+++ b/packages/codistica-react/src/components/input-text/index.module.scss
@@ -10,7 +10,7 @@
   border: 1px solid #232323;
   border-radius: 5px;
   color: #232323;
-  transition: border-bottom 0.2s linear, border 0.2s linear;
+  transition: border 0.2s linear;
 }
 
 .input::placeholder {
